# SKA_assignment

./: .gitignore  README.md  demo.ipynb  pyproject.toml
src/SKA_assignment/: __init__.py  analysing.py  data_handler.py  imaging.py  plotting.py  utils.py
tests/: test_data_handler.py
